<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="@android:color/holo_blue_light">

        <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="bottom"
                android:layout_alignParentBottom="true"
                android:layout_margin="25dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="30sp"
                    android:text="@string/matej_sokol"
                    style="@style/HeadTextSize"
                    android:textStyle="bold"

            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/junior_programmer"

                    android:fontFamily="sans-serif-light"

            />

        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/sokolcoverpic"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/myColor"/>

    </RelativeLayout>


    <LinearLayout
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_width="match_parent">


        <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="157dp"
                android:layout_weight="1"
                android:layout_margin="20dp">

            <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/contact_me"

            />

            <TextView

                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/number"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/mobile"/>

            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/email"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/sokolvm"/>


            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/adress"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/crkvena_61"/>
            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/birth"/>

            <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/skills"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/programming_langs"/>
            <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/languages"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/english_german"/>

            <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/interest"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/sport_dogs_learning"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <info.androidhive.fontawesome.FontTextView
                        android:layout_marginTop="5dp"
                        android:textSize="25sp"
                        android:textColor="@android:color/holo_blue_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fa_facebook_square"
                        android:layout_marginRight="4dp"
                        app:brand_icon="true" android:id="@+id/fontTextView3"/>
                <TextView
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/face_matej"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <info.androidhive.fontawesome.FontTextView
                        android:layout_marginTop="10dp"
                        android:textSize="25sp"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fa_instagram"
                        android:layout_marginRight="4dp"
                        app:brand_icon="true" android:id="@+id/fontTextView5"/>
                <TextView
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:text="@string/instagram_sokol"/>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="176dp"
                android:layout_weight="3"
                android:layout_margin="25dp">


            <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/summary"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/summary_description"/>

            <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/education"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/trasnparentColor"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:text="@string/faculty"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/degree"/>
            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:text="@string/edunova"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/java_php"/>

            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:text="@string/social_faculty"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/pdmdi"/>

            <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="EXPERIENCE"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/trasnparentColor"/>
            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/java_development"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/nba_stats_app"/>
            android:text="EXPERIENCE"/>
            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/php_development"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/walk_my_doggy_dog_web_app"/>
            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/python_development"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/crewcheckin_backend_server_side"/>
            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:text="@string/javascript_node_js"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/yelpcamp_crud_web_app"/>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>

